--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Sbenjamin Homepage</title>
         <meta name="description" content="Sbenjamin Homepage">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="default.css">
