basic css setup with some variables

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         </header>
 
         <div class="container">
-            <h1>this is a header</h1>
-            <img src="portrait.me">
+            <img src="skyler_portrait.jpg">
+            <h1>Aye, This is me:</h1>
+            <p>I'm a Tacoma local and I like to hike!</p>
         </div>
 
     </body>
