added resume button styling

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <body>
         <header>
             <h1>Skyler Benjamin</h1>
-            <button>Resume</button>
+            <element class="button">Resume</element>
         </header>
 
-        <div class="container">
-            <img src="skyler_portrait.jpg">
+        <div class="container" id="content">
             <h1>Aye, This is me:</h1>
             <p>I'm a Tacoma local and I like to hike!</p>
+        </div>
+
+        <div class="container" id="image">
+            <img src="skyler_portrait.jpg">
         </div>
 
     </body>
