got button redirect working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <h1>Skyler Benjamin</h1>
-            <element class="button">Resume</element>
+            <a href="resume.html" class="button">Resume</a>
         </header>
 
         <div class="container" id="content">
