--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <h1>Skyler Benjamin</h1>
-            <element class="button">Homepage</element>
+            <a href="index.html" class="button">Hompage</a>
         </header>
 
         <div class="container" id="content">
