updated css: new var names, centering of elements

--- a/resume.html
+++ b/resume.html
@@ -14,9 +14,36 @@
             <a href="index.html" class="button">Hompage</a>
         </header>
 
-        <div class="container" id="content">
-            <h1>I'm a hard worker</h1>
-            <p>And I get shit done</p>
+        <div class="container">
+            <h1>Professional Summary</h1>
+            <p>Prior education experience both in imperative and declarative programming styles as well as low-level and architectural
+            approaches. I am a research-driven and highly organized worker bringing articulate communication skills and strong
+            attention to detail. I am dedicated, responsible and eager to learn as much as I can from every opportunity I get. I
+            have a passion for computer science that has only grown as time has gone by.</p>
+        </div>
+
+        <div class="container">
+            <h1>Skills</h1>    
+            <table>
+                <tbody>
+                    <tr>
+                        <td>Experience with HTML, CSS, SQL, Python, Java, C, Haskell, Prolog, and MIPS</td>
+                        <td>Quick to master new concepts</td>
+                    </tr>
+                    <tr>
+                        <td>Forklift certified</td>
+                        <td>Able to work collaboratively</td>
+                    </tr>
+                    <tr>
+                        <td>Fire safety and Hazmat certified</td>
+                        <td>Able to grapple with new challenges</td>
+                    </tr>
+                    <tr>
+                        <td>Enthusiastic attitude</td>
+                        <td>Reflective and learning focused mindset</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
 
     </body>
