completed resume details

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <a href="resume.html" class="button">Resume</a>
         </header>
 
-        <div class="container" id="content">
+        <div class="container content">
             <h1>Aye, This is me:</h1>
             <p>I'm a Tacoma local and I like to hike!</p>
         </div>
 
-        <div class="container" id="image">
+        <div class="container">
             <img src="skyler_portrait.jpg">
         </div>
 
