--- a/resume.html
+++ b/resume.html
@@ -16,10 +16,12 @@
 
         <div class="container">
             <h1>Professional Summary</h1>
-            <p>Prior education experience both in imperative and declarative programming styles as well as low-level and architectural
+            <div class="content">
+            Prior education experience both in imperative and declarative programming styles as well as low-level and architectural
             approaches. I am a research-driven and highly organized worker bringing articulate communication skills and strong
             attention to detail. I am dedicated, responsible and eager to learn as much as I can from every opportunity I get. I
-            have a passion for computer science that has only grown as time has gone by.</p>
+            have a passion for computer science that has only grown as time has gone by.
+            </div>
         </div>
 
         <div class="container">
@@ -44,6 +46,15 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
+
+        <div class="container content">
+            <h1>Education</h1>
+            <p>Bachelor of Science: Computer Science and Business Administration Dual Degree</p>
+            <p>University Of Puget Sound – Tacoma, WA</p>
+            <li>Received Dean's Academic Award Scholarship</li>
+            <li>Honor Roll Student (3.89 GPA)</li>
+            <li>Elected to serve as Greek Housing Coordinator for Beta Theta Pi from 2020-2022</li>
         </div>
 
     </body>
