changed resume to match rubric (whoops)

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
             <a href="resume.html" class="button">Resume</a>
         </header>
 
-        <div class="container content">
+
+        
+        <div class="container">
             <h1>Aye, This is me:</h1>
-            <p>I'm a Tacoma local and I like to hike!</p>
+            <img src="skyler_portrait.jpg">
+            <div class="img-text">
+                <p>I'm a Tacoma local and I like to hike!</p>
+            </div>
         </div>
 
-        <div class="container">
-            <img src="skyler_portrait.jpg">
-        </div>
 
     </body>
 </html>
