--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
         </header>
 
         <div class="container">
-            <h1>Professional Summary</h1>
+            <h2>Professional Summary</h2>
             <div class="content">
             Prior education experience both in imperative and declarative programming styles as well as low-level and architectural
             approaches. I am a research-driven and highly organized worker bringing articulate communication skills and strong
@@ -25,7 +25,62 @@
         </div>
 
         <div class="container">
-            <h1>Skills</h1>    
+            <h2>Education</h2>
+            <li>Bachelor of Science: Computer Science and Business Administration Dual Degree</li>
+            <li>Elected to serve as Greek Housing Coordinator for Beta Theta Pi from 2020-2022</li>
+            <li>University Of Puget Sound – Tacoma, WA</li>
+            <li>Received Dean's Academic Award Scholarship</li>
+            <li>Honor Roll Student (3.89 GPA)</li>
+        </div>
+
+        <div class="container content">
+            <h2>Experience</h2>
+            <h3>Robotics Competition</h3>
+            <p>I participated in an afterschool robotics club throughout both middle and highschool, 
+                where I was a principle engineer and programmer. Through excellent collaboration and 
+                rigorous testing we were able to strategize a way to compete our way to first place in 
+                a city-wide robotics competition.</p>
+            <h3>Robotics Volunteering</h3>
+            <p>In Highschool, when I wasn't busy with my Full-IB classload and my own robotics work, 
+                I went back and volunteered to work with the after-school robotics club at my own local
+                middle school (Stewart, on Pacific Ave.), where I helped teach young students the 
+                fundamentals of engineering design and facilitated their exploration of the design process
+                as well as how to practically and efficiently solve tough competition related problems.</li>
+            </p>
+            <h3>FSAD Bootcamp</h3>
+            <p>Last semester I took a bootcamp course online in addition to my UPS course load which taught
+                me the fundamentals of HTML, CSS, and SQL, as well as how to dynamically link them using Python
+                integration. I designed a little toy app website called "dogchat" to test out some of the things 
+                I learned.
+            </p>
+        </div>
+
+
+        <div class="container">
+            <h2>Relevent Coursework</h2>
+            <li>CS 161: Intro to CS</li>
+            <li>MATH 161: Statistics</li>
+            <li>CS 261: Data Structures</li>
+            <li>MATH 210: Math for Computer Science</li>
+            <li>CS 281: Architecture</li>
+            <li>CS 291: Paradigms</li>
+            <li>CS 475: Operating Systems</li>
+        </div>
+
+        <div class="container content">
+            <h2>Technical Projects</h2>
+            <h3>Half-Precision Floating Point Adder Circuit</h3>
+            <p>Using Logisim I created a floating point adder / subtractor circuit capable of Operating
+                on half-precision floating point binary or hexadecimal inputs following the IEEE standard
+                for encoding floating point data.</p>
+            <h3>C Shell</h3>
+            <p>I created my own shell terminal program using C. It was a simplified version of a standard
+                shell but it did support both syncronous and asyncronous file execution as well as a series
+                of custom commands in addition to root binary support.</p>
+        </div>
+
+        <div class="container">
+            <h2>Skills</h2>    
             <table>
                 <tbody>
                     <tr>
@@ -48,14 +103,10 @@
             </table>
         </div>
 
-        <div class="container content">
-            <h1>Education</h1>
-            <p>Bachelor of Science: Computer Science and Business Administration Dual Degree</p>
-            <p>University Of Puget Sound – Tacoma, WA</p>
-            <li>Received Dean's Academic Award Scholarship</li>
-            <li>Honor Roll Student (3.89 GPA)</li>
-            <li>Elected to serve as Greek Housing Coordinator for Beta Theta Pi from 2020-2022</li>
+        <div class="container">
+            
         </div>
+        
 
     </body>
 </html>
