finished resume styling

--- a/resume.html
+++ b/resume.html
@@ -104,7 +104,9 @@
         </div>
 
         <div class="container">
-            
+            <h2>Affiliated With</h2>
+            <h3>Beta Theta Pi</h3>
+            <h3>Puget Sound Residence Life</h3>
         </div>
         
 
