updated some things

--- a/resume.html
+++ b/resume.html
@@ -26,15 +26,19 @@
 
         <div class="container">
             <h2>Education</h2>
-            <li>Bachelor of Science: Computer Science and Business Administration Dual Degree</li>
-            <li>Elected to serve as Greek Housing Coordinator for Beta Theta Pi from 2020-2022</li>
-            <li>University Of Puget Sound – Tacoma, WA</li>
-            <li>Received Dean's Academic Award Scholarship</li>
-            <li>Honor Roll Student (3.89 GPA)</li>
+            <ul>
+                <li>Bachelor of Science: Computer Science and Business Administration Dual Degree</li>
+                <li>Elected to serve as Greek Housing Coordinator for Beta Theta Pi from 2020-2022</li>
+                <li>University Of Puget Sound – Tacoma, WA</li>
+                <li>Received Dean's Academic Award Scholarship</li>
+                <li>Honor Roll Student (3.75 Cumulative GPA)</li>
+            </ul>
         </div>
 
         <div class="container content">
             <h2>Experience</h2>
+            <h3>Greek Housing Coordinator</h3>
+            <p>As Greek Housing Coordinator, my role is to facilitate the smooth day-to-day operation of my house, including acting as a        liaison between executive and administrative bodies. It is my responsibility to advocate for my residents and ensure compliance with the universities policy. Some specific tasks I am responsible for are: (1) having regular meetings with (2-6 per week) with the executive committee, residence life committee, an accountability committee, my resident community, and 1:1's with my direct supervisor; (2) relay information between all associated parties as is necessary for the smooth and accountable operation of the greek house; (3) schedule regular 1:1 meetings (2-4 per semester) with all my residents for a personal check-in of their academic status, current stresses, and mental/physical health, reporting any concerns I have up the ladder.</p>
             <h3>Robotics Competition</h3>
             <p>I participated in an afterschool robotics club throughout both middle and highschool, 
                 where I was a principle engineer and programmer. Through excellent collaboration and 
@@ -58,17 +62,30 @@
 
         <div class="container">
             <h2>Relevent Coursework</h2>
-            <li>CS 161: Intro to CS</li>
-            <li>MATH 161: Statistics</li>
-            <li>CS 261: Data Structures</li>
-            <li>MATH 210: Math for Computer Science</li>
-            <li>CS 281: Architecture</li>
-            <li>CS 291: Paradigms</li>
-            <li>CS 475: Operating Systems</li>
+            <ul class="column" data-columns="2">
+                <li>CS 161: Intro to CS</li>
+                <li>MATH 161: Statistics</li>
+                <li>CS 261: Data Structures</li>
+                <li>CS 210: Math for Computer Science</li>
+                <li>CS 240: Software Engineering</li>
+                <li>CS 281: Architecture</li>
+                <li>CS 291: Paradigms</li>
+                <li>CS 475: Operating Systems</li>
+                <li>CS 431: Intro to Artifical Intelligence</li>
+                <li>CS 475: Databases and Relational Algebra</li>
+                <li>BUS 452: Supply Chain Management</li>
+                <li>BUS 437: Portfolio Management</li>
+                <li>BUS 432: Investments (Captstone)</li>
+            </div>
         </div>
 
         <div class="container content">
             <h2>Technical Projects</h2>
+            <h3>Stock Trading and Portfolio Management Tool</h3>
+            <p>Using the MERN stack (MongoDB, Express, React built on Node.js) to create a powerful and 
+                integrated application which is used to ....</p>
+            <h3>Physics-Based Projectile Game (JS)</h3>
+            <p>Using node.js and a physics engine, matter.js which provides a basic engine and renderer. Using these basic building blocks, I created a randomly generated structure which uses the current level as an input for an infinitely scaling regressive difficulty calculation. </p>
             <h3>Half-Precision Floating Point Adder Circuit</h3>
             <p>Using Logisim I created a floating point adder / subtractor circuit capable of Operating
                 on half-precision floating point binary or hexadecimal inputs following the IEEE standard
@@ -84,7 +101,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <td>Experience with HTML, CSS, SQL, Python, Java, C, Haskell, Prolog, and MIPS</td>
+                        <td>Experience with Javscript, including node.js with the MERN stack, HTML, CSS, React.js, SQL, MongoDB, Python, Java, C, Haskell, Prolog, and MIPS</td>
                         <td>Quick to master new concepts</td>
                     </tr>
                     <tr>
